--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@ div.tn-status span:hover {
 
 div.tn-field {
   border: 1px solid #DDD;
-  background: #EEE;
+  background: #FFE;
   width: 488pt;
   height: 300px;
 }
